add basic store service functionality
