# backend/store_service/src/controllers/product.controllers.ts
@@ -1,19 +1,17 @@
 import { Request, Response } from "express";
-import { getProducts, getAllCategories } from "../services/product.service";
+import { getProducts, getAllCategories, getProductById } from "../services/product.service";
 import { GetProductParams } from "@app_types/product.dto";
-import logger from "../logger";
 
 export const getProductsHandler = async (req: Request, res: Response) => {
   try {
     const productParams: GetProductParams = {
-      search_input: (req.query.search_input as string) || "",
+      searchInput: (req.query.searchInput as string) || "",
       offset: parseInt(req.query.offset as string) || 0,
       limit: parseInt(req.query.limit as string) || 10,
-      category: (req.query.limit as string) || "",
-      min_price: parseInt(req.query.min_price as string) || 0,
-      max_price: parseInt(req.query.max_price as string) || undefined,
+      category: (req.query.category as string) || "",
+      minPrice: parseInt(req.query.minPrice as string) || 0,
+      maxPrice: parseInt(req.query.maxPrice as string) || undefined,
     };
-    logger.info(`offset:${productParams.offset}, limit:${productParams.limit}`);
     const products = await getProducts(productParams);
     res.status(200).json(products);
   } catch (error: any) {
@@ -27,5 +25,22 @@ export const getAllCategoriesHandler = async (req: Request, res: Response) => {
     res.status(200).json(categories);
   } catch (error: any) {
     res.status(500).json({ message: "Failed to fetch categories" });
+  }
+};
+
+export const getProductByIdController = async (
+  req: Request,
+  res: Response
+) => {
+  try {
+    const productId = req.params.id;
+    const product = await getProductById(productId);
+    if (!product) {
+      res.status(404).json({ message: "Product not found" });
+      return;
+    }
+    res.status(200).json(product);
+  } catch (error: any) {
+    res.status(500).json({ message: "Failed to fetch product" });
   }
 };
